check_config_update.log
cargo :     Checking 
nanobot-core v0.1.0 
(C:\Users\AMAN ANU\Desktop\amxcod
es\nanobot\nanobot-rs-clean\crate
s\nanobot-core)
At line:1 char:1
+ cargo check -p nanobot-core 
2>&1 | Out-File -Encoding utf8 
check_conf ...
+ 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : No 
   tSpecified: (    Checking na  
  ...s\nanobot-core):String) [   
 ], RemoteException
    + FullyQualifiedErrorId : Na 
   tiveCommandError
 
warning: unused import: 
`std::sync::Arc`
 --> crates\nanobot-core\src\gate
way\web_adapter.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` on by 
default

warning: unused import: 
`ChannelMessage`
 --> crates\nanobot-core\src\gate
way\web_adapter.rs:9:38
  |
9 | use 
super::adapter::{ChannelAdapter, 
ChannelMessage};
  |                              
        ^^^^^^^^^^^^^^

warning: unused import: 
`std::collections::HashMap`
 --> crates\nanobot-core\src\skil
ls\metadata.rs:2:5
  |
2 | use 
std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: 
`TracerProvider`
 --> crates\nanobot-core\src\obse
rvability.rs:3:40
  |
3 | use opentelemetry_sdk::trace:
:{Tracer, TracerProvider};
  |                              
          ^^^^^^^^^^^^^^

warning: use of deprecated 
function `rand::thread_rng`: 
Renamed to `rng`
  --> crates\nanobot-core\src\sec
urity\secrets.rs:49:15
   |
49 |         rand::thread_rng().f
ill_bytes(&mut nonce_bytes);
   |               ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` 
on by default

warning: use of deprecated 
function `rand::thread_rng`: 
Renamed to `rng`
  --> crates\nanobot-core\src\sec
urity\secrets.rs:93:15
   |
93 |         rand::thread_rng().f
ill_bytes(&mut salt);
   |               ^^^^^^^^^^

error[E0599]: no method named 
`trim` found for enum 
`std::option::Option` in the 
current scope
  --> crates\nanobot-core\src\ant
igravity.rs:43:40
   |
43 |             let key = provid
er.api_key.trim().to_string();
   |                             
           ^^^^ method not found 
in `std::option::Option<std::stri
ng::String>`
   |
note: the method `trim` exists 
on the type `std::string::String`
  --> /rustc/1159e78c4747b02ef996
e55082b704c09b970588\library\core
\src\str\mod.rs:2143:5
help: use the `?` operator to 
extract the 
`std::string::String` value, 
propagating an `Option::None` 
value to the caller
   |
43 |             let key = provid
er.api_key?.trim().to_string();
   |                             
          +

error[E0599]: no method named 
`is_empty` found for enum 
`std::option::Option` in the 
current scope
  --> crates\nanobot-core\src\doc
tor\mod.rs:24:31
   |
24 |                 && 
gl.api_key.is_empty()
   |                             
  ^^^^^^^^ method not found in `s
td::option::Option<std::string::S
tring>`
   |
note: the method `is_empty` 
exists on the type 
`std::string::String`
  --> /rustc/1159e78c4747b02ef996
e55082b704c09b970588\library\allo
c\src\string.rs:1874:5
help: consider using 
`Option::expect` to unwrap the 
`std::string::String` value, 
panicking if the value is an 
`Option::None`
   |
24 |                 && gl.api_ke
y.expect("REASON").is_empty()
   |                             
 +++++++++++++++++

error[E0599]: no method named 
`is_empty` found for enum 
`std::option::Option` in the 
current scope
  --> crates\nanobot-core\src\doc
tor\mod.rs:30:31
   |
30 |                 && 
oa.api_key.is_empty()
   |                             
  ^^^^^^^^ method not found in `s
td::option::Option<std::string::S
tring>`
   |
note: the method `is_empty` 
exists on the type 
`std::string::String`
  --> /rustc/1159e78c4747b02ef996
e55082b704c09b970588\library\allo
c\src\string.rs:1874:5
help: consider using 
`Option::expect` to unwrap the 
`std::string::String` value, 
panicking if the value is an 
`Option::None`
   |
30 |                 && oa.api_ke
y.expect("REASON").is_empty()
   |                             
 +++++++++++++++++

warning: unused variable: `root`
  --> crates\nanobot-core\src\mem
ory\watcher.rs:89:28
   |
89 | fn is_ignored(path: &Path, 
root: &Path) -> bool {
   |                            
^^^^ help: if this is 
intentional, prefix it with an 
underscore: `_root`
   |
   = note: 
`#[warn(unused_variables)]` on 
by default

warning: unused variable: `pid`
  --> crates\nanobot-core\src\con
text\migration.rs:64:40
   |
64 |             let stmt_str = 
if let Some(pid) = parent_id {
   |                             
           ^^^ help: if this is 
intentional, prefix it with an 
underscore: `_pid`

warning: variable does not need 
to be mutable
  --> crates\nanobot-core\src\ski
lls\metadata.rs:69:13
   |
69 |         let mut 
dependencies = Vec::new();
   |             ----^^^^^^^^^^^^
   |             |
   |             help: remove 
this `mut`
   |
   = note: `#[warn(unused_mut)]` 
on by default

warning: variable does not need 
to be mutable
  --> crates\nanobot-core\src\sys
tem\resources.rs:53:13
   |
53 |         let mut sys = 
self.system.lock().unwrap();
   |             ----^^^
   |             |
   |             help: remove 
this `mut`

For more information about this 
error, try `rustc --explain 
E0599`.
warning: `nanobot-core` (lib) 
generated 10 warnings
error: could not compile 
`nanobot-core` (lib) due to 3 
previous errors; 10 warnings 
emitted
